// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styles should return the component floaterProps' arrow color instead of styles.options.arrowColor 1`] = `
{
  "beacon": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#555",
    "cursor": "pointer",
    "display": "inline-block",
    "fontSize": 16,
    "height": 36,
    "lineHeight": 1,
    "padding": 8,
    "position": "relative",
    "width": 36,
    "zIndex": 100,
  },
  "beaconInner": {
    "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
    "backgroundColor": "#f04",
    "borderRadius": "50%",
    "display": "block",
    "height": "50%",
    "left": "50%",
    "opacity": 0.7,
    "position": "absolute",
    "top": "50%",
    "transform": "translate(-50%, -50%)",
    "width": "50%",
  },
  "beaconOuter": {
    "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
    "backgroundColor": "rgba(255,0,68, 0.2)",
    "border": "2px solid #f04",
    "borderRadius": "50%",
    "boxSizing": "border-box",
    "display": "block",
    "height": "100%",
    "left": 0,
    "opacity": 0.9,
    "position": "absolute",
    "top": 0,
    "transformOrigin": "center",
    "width": "100%",
  },
  "buttonBack": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#f04",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "marginLeft": "auto",
    "marginRight": 5,
    "padding": 8,
  },
  "buttonClose": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#333",
    "cursor": "pointer",
    "fontSize": 16,
    "height": 14,
    "lineHeight": 1,
    "padding": 15,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "width": 14,
  },
  "buttonNext": {
    "WebkitAppearance": "none",
    "backgroundColor": "#f04",
    "border": 0,
    "borderRadius": 4,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 8,
  },
  "buttonSkip": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#333",
    "cursor": "pointer",
    "fontSize": 14,
    "lineHeight": 1,
    "padding": 8,
  },
  "floaterStyles": {
    "arrow": {
      "color": "#f00",
    },
    "options": {
      "zIndex": 200,
    },
  },
  "options": {
    "arrowColor": "#fff",
    "backgroundColor": "#fff",
    "beaconSize": 36,
    "overlayColor": "rgba(0, 0, 0, 0.5)",
    "primaryColor": "#f04",
    "spotlightShadow": "0 0 15px rgba(0, 0, 0, 0.5)",
    "textColor": "#333",
    "width": 380,
    "zIndex": 100,
  },
  "overlay": {
    "backgroundColor": "rgba(0, 0, 0, 0.5)",
    "bottom": 0,
    "left": 0,
    "mixBlendMode": "hard-light",
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "overlayLegacy": {
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "overlayLegacyCenter": {
    "backgroundColor": "rgba(0, 0, 0, 0.5)",
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "spotlight": {
    "backgroundColor": "gray",
    "borderRadius": 4,
    "position": "absolute",
  },
  "spotlightLegacy": {
    "borderRadius": 4,
    "boxShadow": "0 0 0 9999px rgba(0, 0, 0, 0.5), 0 0 15px rgba(0, 0, 0, 0.5)",
    "position": "absolute",
  },
  "tooltip": {
    "backgroundColor": "#fff",
    "borderRadius": 5,
    "boxSizing": "border-box",
    "color": "#333",
    "fontSize": 16,
    "maxWidth": "100%",
    "padding": 15,
    "position": "relative",
    "width": 380,
  },
  "tooltipContainer": {
    "lineHeight": 1.4,
    "textAlign": "center",
  },
  "tooltipContent": {
    "padding": "20px 10px",
  },
  "tooltipFooter": {
    "alignItems": "center",
    "display": "flex",
    "justifyContent": "flex-end",
    "marginTop": 15,
  },
  "tooltipFooterSpacer": {
    "flex": 1,
  },
  "tooltipTitle": {
    "fontSize": 18,
    "margin": 0,
  },
}
`;

exports[`styles should return the default styles 1`] = `
{
  "beacon": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#555",
    "cursor": "pointer",
    "display": "inline-block",
    "fontSize": 16,
    "height": 36,
    "lineHeight": 1,
    "padding": 8,
    "position": "relative",
    "width": 36,
    "zIndex": 100,
  },
  "beaconInner": {
    "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
    "backgroundColor": "#f04",
    "borderRadius": "50%",
    "display": "block",
    "height": "50%",
    "left": "50%",
    "opacity": 0.7,
    "position": "absolute",
    "top": "50%",
    "transform": "translate(-50%, -50%)",
    "width": "50%",
  },
  "beaconOuter": {
    "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
    "backgroundColor": "rgba(255,0,68, 0.2)",
    "border": "2px solid #f04",
    "borderRadius": "50%",
    "boxSizing": "border-box",
    "display": "block",
    "height": "100%",
    "left": 0,
    "opacity": 0.9,
    "position": "absolute",
    "top": 0,
    "transformOrigin": "center",
    "width": "100%",
  },
  "buttonBack": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#f04",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "marginLeft": "auto",
    "marginRight": 5,
    "padding": 8,
  },
  "buttonClose": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#333",
    "cursor": "pointer",
    "fontSize": 16,
    "height": 14,
    "lineHeight": 1,
    "padding": 15,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "width": 14,
  },
  "buttonNext": {
    "WebkitAppearance": "none",
    "backgroundColor": "#f04",
    "border": 0,
    "borderRadius": 4,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 8,
  },
  "buttonSkip": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#333",
    "cursor": "pointer",
    "fontSize": 14,
    "lineHeight": 1,
    "padding": 8,
  },
  "floaterStyles": {
    "arrow": {
      "color": "#fff",
    },
    "options": {
      "zIndex": 200,
    },
  },
  "options": {
    "arrowColor": "#fff",
    "backgroundColor": "#fff",
    "beaconSize": 36,
    "overlayColor": "rgba(0, 0, 0, 0.5)",
    "primaryColor": "#f04",
    "spotlightShadow": "0 0 15px rgba(0, 0, 0, 0.5)",
    "textColor": "#333",
    "width": 380,
    "zIndex": 100,
  },
  "overlay": {
    "backgroundColor": "rgba(0, 0, 0, 0.5)",
    "bottom": 0,
    "left": 0,
    "mixBlendMode": "hard-light",
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "overlayLegacy": {
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "overlayLegacyCenter": {
    "backgroundColor": "rgba(0, 0, 0, 0.5)",
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "spotlight": {
    "backgroundColor": "gray",
    "borderRadius": 4,
    "position": "absolute",
  },
  "spotlightLegacy": {
    "borderRadius": 4,
    "boxShadow": "0 0 0 9999px rgba(0, 0, 0, 0.5), 0 0 15px rgba(0, 0, 0, 0.5)",
    "position": "absolute",
  },
  "tooltip": {
    "backgroundColor": "#fff",
    "borderRadius": 5,
    "boxSizing": "border-box",
    "color": "#333",
    "fontSize": 16,
    "maxWidth": "100%",
    "padding": 15,
    "position": "relative",
    "width": 380,
  },
  "tooltipContainer": {
    "lineHeight": 1.4,
    "textAlign": "center",
  },
  "tooltipContent": {
    "padding": "20px 10px",
  },
  "tooltipFooter": {
    "alignItems": "center",
    "display": "flex",
    "justifyContent": "flex-end",
    "marginTop": 15,
  },
  "tooltipFooterSpacer": {
    "flex": 1,
  },
  "tooltipTitle": {
    "fontSize": 18,
    "margin": 0,
  },
}
`;

exports[`styles should return the inherited props' styles 1`] = `
{
  "beacon": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#555",
    "cursor": "pointer",
    "display": "inline-block",
    "fontSize": 16,
    "height": 36,
    "lineHeight": 1,
    "padding": 8,
    "position": "relative",
    "width": 36,
    "zIndex": 100,
  },
  "beaconInner": {
    "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
    "backgroundColor": "#ff0",
    "borderRadius": "50%",
    "display": "block",
    "height": "50%",
    "left": "50%",
    "opacity": 0.7,
    "position": "absolute",
    "top": "50%",
    "transform": "translate(-50%, -50%)",
    "width": "50%",
  },
  "beaconOuter": {
    "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
    "backgroundColor": "rgba(255,255,0, 0.2)",
    "border": "2px solid #ff0",
    "borderRadius": "50%",
    "boxSizing": "border-box",
    "display": "block",
    "height": "100%",
    "left": 0,
    "opacity": 0.9,
    "position": "absolute",
    "top": 0,
    "transformOrigin": "center",
    "width": "100%",
  },
  "buttonBack": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#ff0",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "marginLeft": "auto",
    "marginRight": 5,
    "padding": 8,
  },
  "buttonClose": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 16,
    "height": 14,
    "lineHeight": 1,
    "padding": 15,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "width": 14,
  },
  "buttonNext": {
    "WebkitAppearance": "none",
    "backgroundColor": "#ff0",
    "border": 0,
    "borderRadius": 4,
    "color": "#00f",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 8,
  },
  "buttonSkip": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 14,
    "lineHeight": 1,
    "padding": 8,
  },
  "floaterStyles": {
    "arrow": {
      "color": "#00f",
    },
    "options": {
      "zIndex": 200,
    },
  },
  "options": {
    "arrowColor": "#00f",
    "backgroundColor": "#00f",
    "beaconSize": 36,
    "overlayColor": "rgba(0, 0, 0, 0.5)",
    "primaryColor": "#ff0",
    "spotlightShadow": "0 0 15px rgba(0, 0, 0, 0.5)",
    "textColor": "#fff",
    "width": 380,
    "zIndex": 100,
  },
  "overlay": {
    "backgroundColor": "rgba(0, 0, 0, 0.5)",
    "bottom": 0,
    "left": 0,
    "mixBlendMode": "hard-light",
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "overlayLegacy": {
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "overlayLegacyCenter": {
    "backgroundColor": "rgba(0, 0, 0, 0.5)",
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "spotlight": {
    "backgroundColor": "gray",
    "borderRadius": 4,
    "position": "absolute",
  },
  "spotlightLegacy": {
    "borderRadius": 4,
    "boxShadow": "0 0 0 9999px rgba(0, 0, 0, 0.5), 0 0 15px rgba(0, 0, 0, 0.5)",
    "position": "absolute",
  },
  "tooltip": {
    "backgroundColor": "#00f",
    "borderRadius": 5,
    "boxSizing": "border-box",
    "color": "#fff",
    "fontSize": 16,
    "maxWidth": "100%",
    "padding": 15,
    "position": "relative",
    "width": 380,
  },
  "tooltipContainer": {
    "lineHeight": 1.4,
    "textAlign": "center",
  },
  "tooltipContent": {
    "padding": "20px 10px",
  },
  "tooltipFooter": {
    "alignItems": "center",
    "display": "flex",
    "justifyContent": "flex-end",
    "marginTop": 15,
  },
  "tooltipFooterSpacer": {
    "flex": 1,
  },
  "tooltipTitle": {
    "fontSize": 18,
    "margin": 0,
  },
}
`;

exports[`styles should return the step floaterProps' arrow color instead of styles.options.arrowColor 1`] = `
{
  "beacon": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#555",
    "cursor": "pointer",
    "display": "inline-block",
    "fontSize": 16,
    "height": 36,
    "lineHeight": 1,
    "padding": 8,
    "position": "relative",
    "width": 36,
    "zIndex": 100,
  },
  "beaconInner": {
    "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
    "backgroundColor": "#f04",
    "borderRadius": "50%",
    "display": "block",
    "height": "50%",
    "left": "50%",
    "opacity": 0.7,
    "position": "absolute",
    "top": "50%",
    "transform": "translate(-50%, -50%)",
    "width": "50%",
  },
  "beaconOuter": {
    "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
    "backgroundColor": "rgba(255,0,68, 0.2)",
    "border": "2px solid #f04",
    "borderRadius": "50%",
    "boxSizing": "border-box",
    "display": "block",
    "height": "100%",
    "left": 0,
    "opacity": 0.9,
    "position": "absolute",
    "top": 0,
    "transformOrigin": "center",
    "width": "100%",
  },
  "buttonBack": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#f04",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "marginLeft": "auto",
    "marginRight": 5,
    "padding": 8,
  },
  "buttonClose": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#333",
    "cursor": "pointer",
    "fontSize": 16,
    "height": 14,
    "lineHeight": 1,
    "padding": 15,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "width": 14,
  },
  "buttonNext": {
    "WebkitAppearance": "none",
    "backgroundColor": "#f04",
    "border": 0,
    "borderRadius": 4,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 8,
  },
  "buttonSkip": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#333",
    "cursor": "pointer",
    "fontSize": 14,
    "lineHeight": 1,
    "padding": 8,
  },
  "floaterStyles": {
    "arrow": {
      "color": "#f00",
    },
    "options": {
      "zIndex": 200,
    },
  },
  "options": {
    "arrowColor": "#00f",
    "backgroundColor": "#fff",
    "beaconSize": 36,
    "overlayColor": "rgba(0, 0, 0, 0.5)",
    "primaryColor": "#f04",
    "spotlightShadow": "0 0 15px rgba(0, 0, 0, 0.5)",
    "textColor": "#333",
    "width": 380,
    "zIndex": 100,
  },
  "overlay": {
    "backgroundColor": "rgba(0, 0, 0, 0.5)",
    "bottom": 0,
    "left": 0,
    "mixBlendMode": "hard-light",
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "overlayLegacy": {
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "overlayLegacyCenter": {
    "backgroundColor": "rgba(0, 0, 0, 0.5)",
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "spotlight": {
    "backgroundColor": "gray",
    "borderRadius": 4,
    "position": "absolute",
  },
  "spotlightLegacy": {
    "borderRadius": 4,
    "boxShadow": "0 0 0 9999px rgba(0, 0, 0, 0.5), 0 0 15px rgba(0, 0, 0, 0.5)",
    "position": "absolute",
  },
  "tooltip": {
    "backgroundColor": "#fff",
    "borderRadius": 5,
    "boxSizing": "border-box",
    "color": "#333",
    "fontSize": 16,
    "maxWidth": "100%",
    "padding": 15,
    "position": "relative",
    "width": 380,
  },
  "tooltipContainer": {
    "lineHeight": 1.4,
    "textAlign": "center",
  },
  "tooltipContent": {
    "padding": "20px 10px",
  },
  "tooltipFooter": {
    "alignItems": "center",
    "display": "flex",
    "justifyContent": "flex-end",
    "marginTop": 15,
  },
  "tooltipFooterSpacer": {
    "flex": 1,
  },
  "tooltipTitle": {
    "fontSize": 18,
    "margin": 0,
  },
}
`;

exports[`styles should return the step's styles 1`] = `
{
  "beacon": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#555",
    "cursor": "pointer",
    "display": "inline-block",
    "fontSize": 16,
    "height": 36,
    "lineHeight": 1,
    "padding": 8,
    "position": "relative",
    "width": 36,
    "zIndex": 100,
  },
  "beaconInner": {
    "animation": "joyride-beacon-inner 1.2s infinite ease-in-out",
    "backgroundColor": "#f00",
    "borderRadius": "50%",
    "display": "block",
    "height": "50%",
    "left": "50%",
    "opacity": 0.7,
    "position": "absolute",
    "top": "50%",
    "transform": "translate(-50%, -50%)",
    "width": "50%",
  },
  "beaconOuter": {
    "animation": "joyride-beacon-outer 1.2s infinite ease-in-out",
    "backgroundColor": "rgba(255,0,0, 0.2)",
    "border": "2px solid #f00",
    "borderRadius": "50%",
    "boxSizing": "border-box",
    "display": "block",
    "height": "100%",
    "left": 0,
    "opacity": 0.9,
    "position": "absolute",
    "top": 0,
    "transformOrigin": "center",
    "width": "100%",
  },
  "buttonBack": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#f00",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "marginLeft": "auto",
    "marginRight": 5,
    "padding": 8,
  },
  "buttonClose": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 16,
    "height": 14,
    "lineHeight": 1,
    "padding": 15,
    "position": "absolute",
    "right": 0,
    "top": 0,
    "width": 14,
  },
  "buttonNext": {
    "WebkitAppearance": "none",
    "backgroundColor": "#f00",
    "border": 0,
    "borderRadius": 4,
    "color": "#000",
    "cursor": "pointer",
    "fontSize": 16,
    "lineHeight": 1,
    "padding": 8,
  },
  "buttonSkip": {
    "WebkitAppearance": "none",
    "backgroundColor": "transparent",
    "border": 0,
    "borderRadius": 0,
    "color": "#fff",
    "cursor": "pointer",
    "fontSize": 14,
    "lineHeight": 1,
    "padding": 8,
  },
  "floaterStyles": {
    "arrow": {
      "color": "#000",
    },
    "options": {
      "zIndex": 200,
    },
  },
  "options": {
    "arrowColor": "#000",
    "backgroundColor": "#000",
    "beaconSize": 36,
    "overlayColor": "rgba(0, 0, 0, 0.5)",
    "primaryColor": "#f00",
    "spotlightShadow": "0 0 15px rgba(0, 0, 0, 0.5)",
    "textColor": "#fff",
    "width": 380,
    "zIndex": 100,
  },
  "overlay": {
    "backgroundColor": "rgba(0, 0, 0, 0.5)",
    "bottom": 0,
    "left": 0,
    "mixBlendMode": "hard-light",
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "overlayLegacy": {
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "overlayLegacyCenter": {
    "backgroundColor": "rgba(0, 0, 0, 0.5)",
    "bottom": 0,
    "left": 0,
    "overflow": "hidden",
    "position": "absolute",
    "right": 0,
    "top": 0,
    "zIndex": 100,
  },
  "spotlight": {
    "backgroundColor": "gray",
    "borderRadius": 4,
    "position": "absolute",
  },
  "spotlightLegacy": {
    "borderRadius": 4,
    "boxShadow": "0 0 0 9999px rgba(0, 0, 0, 0.5), 0 0 15px rgba(0, 0, 0, 0.5)",
    "position": "absolute",
  },
  "tooltip": {
    "backgroundColor": "#000",
    "borderRadius": 5,
    "boxSizing": "border-box",
    "color": "#fff",
    "fontSize": 16,
    "maxWidth": "100%",
    "padding": 15,
    "position": "relative",
    "width": 380,
  },
  "tooltipContainer": {
    "lineHeight": 1.4,
    "textAlign": "center",
  },
  "tooltipContent": {
    "padding": "20px 10px",
  },
  "tooltipFooter": {
    "alignItems": "center",
    "display": "flex",
    "justifyContent": "flex-end",
    "marginTop": 15,
  },
  "tooltipFooterSpacer": {
    "flex": 1,
  },
  "tooltipTitle": {
    "fontSize": 18,
    "margin": 0,
  },
}
`;
